my writing here

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <aside>
     <h2>About Me</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
+    <p>Be brave and overcome difficulties. Run your way up until you reach your goal. Organize your time and ideas..</p>
 </aside>
 <!-- end of new content -->
 
